--- a/matches.html
+++ b/matches.html
@@ -14,7 +14,7 @@
             <div class="flex justify-between items-center h-16">
                 <!-- Logo and Main Nav -->
                 <div class="flex items-center space-x-8">
-                    <a href="index.html" class="text-2xl font-bold">GoalSphere</a>
+                    <a href="index.php" class="text-2xl font-bold">GoalSphere</a>
                     <div class="hidden md:flex space-x-8">
                         <a href="matches.html" class="hover:text-gray-300">Matches</a>
                         <a href="#teams" class="hover:text-gray-300">Teams</a>
